# pharma_attack

./: .env.example  ATTACK_SCENARIOS.md  PharmaAttack_Modification_Guide.md  README.md  TEAMMATE_MODIFICATION_GUIDE.md  TESTBENCH.md  pyproject.toml
src/: __init__.py  chroma_lab.py  config_runtime.py  metrics.py  offline_lab.py  payloads.py  reporting.py  stub_attack.py  testbench.py
srcipts/: attack_rag_lab.py  reset_attack_lab.py  run_testbench.py  summarize_attack_results.py
test/: test_metrics.py  test_payloads.py  test_stub_attack.py  test_testbench_offline.py
